Small code cleanups, added comments, fixed hrefs in documentation.

--- a/OpenPhotosynth.RichClient/Assets/About.html
+++ b/OpenPhotosynth.RichClient/Assets/About.html
@@ -3,17 +3,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif }
+    </style>
+    <title>About - Photosynth REST API Demo</title>
 </head>
 <body>
     <h1>Photosynth REST API Demo</h1>
-    <p>This application demonstrates how to use the Photosynth REST API in conjunction with Microsoft Account for authentication to create a desktop application
+    <p>This application demonstrates how to use the <a href="https://photosynth.net/api/docs/restapi.html">Photosynth REST API</a> in conjunction with Microsoft Account for authentication to create a desktop application
     for uploading images to create Technical Preview Photosynths. You can use this code as a basis to create your own. For example, you could provide creative
     and beautiful new ways for presenting a Photosynth user's library, or make a mobile app for capturing and uploading images.</p>
     <p>The OpenPhotosynth project is provided as a Portable Class Library, so you can use it across your Windows Store, Windows Phone, Silverlight and, of course,
     .NET desktop applications.</p>
-    <p>All of the source code is released under the Microsoft Public License; feel free to use, modify and distribute this code as you see fit.</p>
+    <p>All of the <a href="https://github.com/openps/ps-rich-client">source code</a> is released under the MIT License; feel free to use, modify and distribute this code as you see fit.</p>
     <p>See the official REST API documentation for more detailed information, and use the forum to reach out if you have any questions or issues.</p>
-    <p>If you're looking for information about the Open Source Technical Preview Photosynth Viewer, you can find that <a href="#">here</a>.</p>
+    <p>If you're looking for information about the Open Source Technical Preview Photosynth Viewer, you can find that <a href="https://photosynth.net/developer.aspx">here</a>.</p>
 </body>
 </html>
